Fix styling of slider (alignment with other widgets).

--- a/ipywidgets/static/widgets/less/widgets.less
+++ b/ipywidgets/static/widgets/less/widgets.less
@@ -100,87 +100,95 @@
     +------------------------------------------+
     */
 
-    /* Fix the padding of the slide track so the ui-slider is sized 
-    correctly. */
-    padding-left  : 8px;
-    padding-right : 2px;
-    overflow      : visible;
-
-    /* Default size of the slider */
     width        : @widget-width; 
-    height       : 5px;
-    max-height   : 5px;
-    margin-top   : 15px;
-    margin-bottom: 12px;
+
+    .slider-container {
+        /* Fix the padding of the slide track so the ui-slider is sized 
+        correctly. */
+        padding-left  : 8px;
+        padding-right : 2px;
+        overflow      : visible;
+
+        /* Default size of the slider */
+        flex-grow    : 1;
+        height       : 5px;
+        max-height   : 5px;
+        margin-top   : 15px;
+        margin-bottom: 12px;
     
-    /* Style the slider track */
-    .slide-track();
+        /* Style the slider track */
+        .slide-track();
 
-    /* Make the div a flex box (makes FF behave correctly). */
-    .hbox();
-
-    .ui-slider {
-        /* Inner, invisible slide div */
+        /* Make the div a flex box (makes FF behave correctly). */
         .hbox();
-        .box-flex1();
 
-        border     : 0px;
-        background : none;
+        .ui-slider {
+            /* Inner, invisible slide div */
+            .hbox();
+            .box-flex1();
 
-        .ui-slider-handle {
-            width: 12px;
-            height: 28px;
-            margin-top: -8px;
-            border-radius: @border-radius-base;
-        }
+            border     : 0px;
+            background : none;
 
-        .ui-slider-range {
-            height     : 12px;
-            margin-top : -4px;
+            .ui-slider-handle {
+                width: 12px;
+                height: 28px;
+                margin-top: -8px;
+                border-radius: @border-radius-base;
+            }
+
+            .ui-slider-range {
+                height     : 12px;
+                margin-top : -4px;
+            }
         }
     }
 }
 
 .widget-vslider {
     /* Vertical jQuery Slider */
-    
-    /* Fix the padding of the slide track so the ui-slider is sized 
-    correctly. */
-    padding-bottom : 5px;
-    overflow       : visible; 
+    width: 50px;   
+ 
+    .slider-container {
+        /* Fix the padding of the slide track so the ui-slider is sized 
+        correctly. */
+        padding-bottom : 5px;
+        overflow       : visible; 
 
-    /* Default size of the slider */
-    width       : 5px;
-    max-width   : 5px;
-    height      : 250px;
-    margin-left : 14px;
+        /* Default size of the slider */
+        width        : 5px;
+	max-width    : 5px;
+	height       : 250px;
+	margin-left  : auto;
+	margin-right : auto;
     
-    /* Style the slider track */
-    .slide-track();
+        /* Style the slider track */
+        .slide-track();
 
-    /* Make the div a flex box (makes FF behave correctly). */
-    .vbox();
-    
-    .ui-slider {
-        /* Inner, invisible slide div */
+        /* Make the div a flex box (makes FF behave correctly). */
         .vbox();
-        .box-flex1();
+    
+        .ui-slider {
+            /* Inner, invisible slide div */
+            .vbox();
+            .box-flex1();
 
-        border      : 0px;
-        background  : none;
-        margin-left : -4px;
-        margin-top  : 5px;
+            border      : 0px;
+            background  : none;
+            margin-left : -4px;
+            margin-top  : 5px;
 
-        .ui-slider-handle {
-            width       : 28px;
-            height      : 12px;
-            margin-left : -9px;
-            border-radius: @border-radius-base;
-        }
+            .ui-slider-handle {
+                width       : 28px;
+                height      : 12px;
+                margin-left : -9px;
+                border-radius: @border-radius-base;
+            }
 
-        .ui-slider-range {
-            width       : 12px;
-            margin-left : -1px;
+            .ui-slider-range {
+                width       : 12px;
+                margin-left : -1px;
+            }
         }
     }
 }
@@ -291,8 +299,12 @@
 
 .widget-hprogress {
     /* Progress Bar */
+    width : @widget-width;
     margin-top: 8px;
-    min-width : @widget-width;
+
+    .progress {
+        flex-grow: 1;
+    }
 
     .progress-bar {
         /* Disable progress bar animation */
@@ -307,8 +319,12 @@
 .widget-vprogress {
     /* Progress Bar */
     margin-top: 8px;
-    min-height : 250px;
+    min-height: 250px;
     width: 12px;
+
+    .progress {
+        flex-grow: 1;
+    }
 
     .progress-bar {
         /* Disable progress bar animation */
@@ -363,10 +379,11 @@
     }
 
     .widget-readout {
-        padding-left   : 8px;
+        padding-left   : 4px;
         padding-top    : 5px;
-        text-align     : left;
+        text-align     : center;
         vertical-align : text-top;
+        min-width      : 3.5em;
     }
 }
 
